tests/invalid/class_binop_floordiv_missing_method/main.py
class A:
    pass


def main() -> None:
    x: A = A()
    y: A = A()
    _ = x // y
